<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailMovieActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBackground_mov"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_220"
                android:contentDescription="@string/content_image_back"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_220"
                android:background="@drawable/bg_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/viewCover_mov"
                    android:layout_width="@dimen/size_150"
                    android:layout_height="@dimen/size_170"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="210dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle_mov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/size_32"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:text="@string/movie"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover_mov"
                    app:layout_constraintTop_toTopOf="@+id/viewCover_mov" />

                <TextView
                    android:id="@+id/tvRelease_mov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover_mov"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle_mov"
                    tools:text="2000" />

                <TextView
                    android:id="@+id/tvGenres_mov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover_mov"
                    app:layout_constraintTop_toBottomOf="@+id/tvRelease_mov"
                    tools:text="Drama" />

                <TextView
                    android:id="@+id/tvRating_mov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover_mov"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenres_mov"
                    tools:text="" />

                <TextView
                    android:id="@+id/tvDescription_mov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_80"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:maxLines="20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRating_mov" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCover_mov"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_220"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_140"
                android:layout_marginEnd="@dimen/margin_24"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/bg_ripple"
                app:cardCornerRadius="@dimen/radius_8"
                app:cardElevation="@dimen/elevation_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgPoster_mov"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_image_back"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_mov"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack_mov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_rounded"
                android:contentDescription="@string/content_image_back"
                android:padding="@dimen/size_5"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="@color/white" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>
</androidx.constraintlayout.widget.ConstraintLayout>